deploy/k8s/network-policies/30-allow-internal-service-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-service-ports
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: myapp
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 8084
        - protocol: TCP
          port: 8500
        - protocol: TCP
          port: 8888
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: myapp
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 8084
        - protocol: TCP
          port: 8500
        - protocol: TCP
          port: 8888
